# SDL3_HammerEngine_Template

./: .copilotignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DATA_DRIVEN_NPC_IMPLEMENTATION.md  Doxyfile  EVENTDEMOSTATE_CRASH_FIX_VALIDATION.md  EVENTDEMOSTATE_CRASH_INVESTIGATION.md  EVENTDEMOSTATE_FIXES.md  EVENTMANAGER_FIXES.md  FIX_SUMMARY.md  GEMINI.md  LICENSE  PATHFINDING_REDESIGN.md  README.md  SIMD_BENCHMARK_DELIVERY.md  STATIC_ANALYSIS.md  Threading_fixes.md  VALGRIND_ANALYSIS_COMPLETE.md  VALGRIND_SUMMARY_2025.md  WORLD_UPDATE_CHANGELOG.md  cppcheck_report.txt  cppcheck_report_new.xml  game-systems-code-review.skill  git_exclude.txt  hammer_engine_performance.md  package-lock.json  physics_pathfinding_implementation_plan.md  rpg_items_1000.csv  run_ai_benchmark.bat  run_ai_benchmark.sh  run_ai_optimization_tests.bat  run_ai_optimization_tests.sh  run_ai_tests.bat  run_ai_tests.sh  run_all_tests.bat  run_all_tests.sh  run_event_scaling_benchmark.bat  run_event_scaling_benchmark.sh  (+20 more)
tests/: AGENTS.md  AIOptimizationTest.cpp  AIScalingBenchmark.cpp  AI_TESTING.md  BEHAVIOR_TESTING.md  BehaviorFunctionalityTest.cpp  BufferReuseTests.cpp  BufferUtilizationTest.cpp  CMakeLists.txt  CameraTests.cpp  CollisionPathfindingBenchmark.cpp  CollisionPathfindingIntegrationTests.cpp  EntityStateManagerTests.cpp  EventManagerScalingBenchmark.cpp  GameEngineTests.cpp  GameStateManagerTests.cpp  InputManagerCommandTests.cpp  InputManagerTests.cpp  LoadingStateTests.cpp  MockPlayer.cpp  MockPlayer.hpp  PathfinderManagerTests.cpp  README.md  RenderingPipelineTests.cpp  SAVEGAME_TESTING.md  SIMDCorrectnessTests.cpp  SaveManagerTests.cpp  SettingsManagerTests.cpp  TESTING.md  THREAD_TESTING.md  TROUBLESHOOTING.md  ThreadSafeAIIntegrationTest.cpp  ThreadSafeAIManagerTest.cpp  ThreadSystemTests.cpp  UIManagerFunctionalTests.cpp  analyze_benchmarks.sh  collision_perf_test.cpp  crash_demo  crash_demo_fix  power_profile.cpp  (+2 more)
tests/ai/: AGENTS.md  CrowdRuntimeTests.cpp
tests/clang-tidy/: .clang-tidy  README.md  clang_tidy_focused.sh  clang_tidy_suppressions.txt  run_clang_tidy.sh
tests/collisions/: CollisionManagerEDMIntegrationTests.cpp  CollisionSystemTests.cpp
tests/controllers/: CombatControllerTests.cpp  ControllerRegistryTests.cpp  DayNightControllerTests.cpp  GameplayHUDControllerTests.cpp  HarvestControllerTests.cpp  HudControllerTests.cpp  InventoryControllerTests.cpp  ItemControllerTests.cpp  NPCRenderControllerTests.cpp  ResourceRenderControllerTests.cpp  SocialControllerTests.cpp  TimeControllerTests.cpp  TradeControllerTests.cpp  WeatherControllerTests.cpp
tests/core/: GameTimeCalendarTests.cpp  GameTimeSeasonTests.cpp  GameTimeTests.cpp
tests/cppcheck/: FIXES.md  README.md  cppcheck_focused.bat  cppcheck_focused.sh  cppcheck_lib.cfg  cppcheck_suppressions.txt  focused_issues.xml  original_cppcheck_results.xml  real_issues.xml  run_cppcheck.bat  run_cppcheck.sh
tests/events/: EventManagerBehaviorTests.cpp  EventManagerTest.cpp  EventManagerTestAccess.cpp  EventManagerTestAccess.hpp  EventTypesTest.cpp  WeatherEventTest.cpp
tests/gpu/: GPUDeviceTests.cpp  GPUFrameTimingBenchmark.cpp  GPUPipelineConfigTests.cpp  GPURendererTests.cpp  GPUResourceTests.cpp  GPUShaderManagerTests.cpp  GPUTestFixture.hpp  GPUTypesTests.cpp  GPUVertexPoolTests.cpp  SpriteBatchTests.cpp
tests/integration/: AICollisionIntegrationTests.cpp  EventCoordinationIntegrationTests.cpp  KnockbackSidecarTest.cpp  PathfinderAIContentionTests.cpp
tests/managers/: AGENTS.md  AIManagerEDMIntegrationTests.cpp  BackgroundSimulationManagerBenchmark.cpp  BackgroundSimulationManagerTests.cpp  EntityDataManagerTests.cpp  GameTimeManagerCalendarTests.cpp  GameTimeManagerSeasonTests.cpp  GameTimeManagerTests.cpp  ManagerRuntimeTests.cpp  NPCMemoryTests.cpp  PathfinderManagerEDMIntegrationTests.cpp  ProjectileManagerTests.cpp  SparseSidecarTest.cpp
tests/mocks/: AIBehavior.cpp  AIBehaviors.hpp  MockAIBehavior.cpp  MockAIBehavior.hpp  MockGameEngine.cpp  MockGameEngine.hpp  MockNPC.cpp  MockNPC.hpp  MockPlayer.cpp  MockPlayer.hpp  NPCSpawnEventTest.cpp  SimpleMockNPC.cpp
tests/particle/: ParticleManagerCoreTest.cpp  ParticleManagerPerformanceTest.cpp  ParticleManagerThreadingTest.cpp  ParticleManagerWeatherTest.cpp
tests/pathfinding/: PathfindingSystemTests.cpp
tests/performance/: AdaptiveThreadingAnalysis.cpp  CollisionBenchmark.cpp  CollisionScalingBenchmark.cpp  IntegratedSystemBenchmark.cpp  PathfinderBenchmark.cpp  ProjectileScalingBenchmark.cpp  SIMDBenchmark.cpp  SIMD_BENCHMARK_README.md
tests/power_profiling/: IMPLEMENTATION.md  PARSER_GUIDE.md  PROFILE_NOTES.md  QUICK_REFERENCE.md  README.md  REAL_APP_PROFILING.md  analyze_benchmark.py  compare_benchmarks.py  parse_powermetrics.py  power_multi.plist  run_power_test.sh
tests/resources/: InventoryComponentTests.cpp  ResourceArchitectureTests.cpp  ResourceChangeEventTests.cpp  ResourceEdgeCaseTests.cpp  ResourceFactoryTests.cpp  ResourceIntegrationTests.cpp  ResourceManagerTests.cpp  ResourceTemplateManagerJsonTests.cpp  ResourceTemplateManagerTests.cpp  ResourceTestAccess.cpp  ResourceTestAccess.hpp  WorldResourceManagerTests.cpp
tests/test_scripts/: run_adaptive_threading_analysis.bat  run_adaptive_threading_analysis.sh  run_ai_benchmark.bat  run_ai_benchmark.sh  run_ai_collision_integration_tests.bat  run_ai_collision_integration_tests.sh  run_ai_manager_edm_integration_tests.bat  run_ai_manager_edm_integration_tests.sh  run_ai_optimization_tests.bat  run_ai_optimization_tests.sh  run_all_tests.bat  run_all_tests.sh  run_background_simulation_manager_benchmark.bat  run_background_simulation_manager_benchmark.sh  run_behavior_functionality_tests.bat  run_behavior_functionality_tests.sh  run_buffer_reuse_tests.bat  run_buffer_reuse_tests.sh  run_buffer_utilization_tests.bat  run_buffer_utilization_tests.sh  run_camera_tests.bat  run_camera_tests.sh  run_collision_benchmark.bat  run_collision_benchmark.sh  run_collision_manager_edm_integration_tests.bat  run_collision_manager_edm_integration_tests.sh  run_collision_pathfinding_benchmark.bat  (+99 more)
(+797 files in other folders)
